--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                         <div class="skills__info">
                             <div class="skills__data">
                                 <div class="skills__blob">
-                                    <img src="assets/img/icons8-java-120.svg" alt="skills image">
+                                    <img src="assets/img/icons8-python-48.png" alt="skills image">
                                 </div>
                                 <h3 class="skills__name">
-                                    Java
+                                    Python
                                 </h3>
                                 <span class="skills__subtitle">
                                     Intermediate
