--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="home__data grid">
                         <h1 class="home__title">
                             Hi, I'm Dhruv Wadhwani <br>
-                            Software Developer <br>
+                            Web Developer <br>
                         </h1>
                         <div class="home__blob grid">
                             <div class="home__perfil">
@@ -172,7 +172,7 @@
                     <!--==================== SKILLS 1 ====================-->
                     <div class="skills__content">
                         <h3 class="skills__title">
-                            <i class="ri-braces-line"></i> Software Developer
+                            <i class="ri-braces-line"></i> Web Developer
                         </h3>
                         <div class="skills__info">
                             <div class="skills__data">
