donwload resume added

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <div>
                         <h3 class="home__info-title">EDUCATION</h3>
                         <p class="home__info-description">
-                            Secondary - RockWoods High School - Udaipur (Raj.) <br />
+                            <h3>Graduation</h3> - Karnavati University, Gandhinagar (Gujarat)<br />
                             <br />
-                            Graduation- Karnavati University<br />
+                            <h3>Higher Secondary and Secondary </h3>- RockWoods High School - Udaipur (Raj.) <br />
                         </p>
                     </div>
                 </div>
