donwload resume added

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                         <p class="home__info-number">5+</p>
                     </div>
                     <div>
-                        <!-- <h3 class="home__info-title">
-                                COMPANIES WORKED FOR
+                        <h3 class="home__info-title">
+                                LANGUAGE PROFICIENCY 
                             </h3>
-                            <p class="home__info-number">
-                                2+
-                            </p> -->
+                            <p style="font-size: medium; font-weight: 500;" class="home__info-number">
+                                English , Hindi 
+                            </p>
                     </div>
                 </div>
             </div>
