--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 <img src="assets/img/icons8-python-48.png" alt="skills image" />
                             </div>
                             <h3 class="skills__name">Python</h3>
-                            <span class="skills__subtitle"> Intermediate </span>
+                            <span class="skills__subtitle"> Advanced </span>
                         </div>
                         <div class="skills__data">
                             <div class="skills__blob">
