mobile media queries fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li>
                     <li class="nav__itemm">
                         <a href="#competencies" class="nav__link">
-                            <i class="ri-code-line"></i> Competencies
+                            <i class="ri-community-line"></i> Competencies
                         </a>
                     </li>
 
@@ -351,6 +351,13 @@
                             </div>
                             <h3 class="skills__name">GFG</h3>
                         </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="assets/img/tcs logo.png" alt="skills image" />
+                            </div>
+                            <h3 class="skills__name">TCS</h3>
+                        </div>
                     </div>
                 </div>
                 <!--==================== SKILLS 2 ====================-->
@@ -376,6 +383,12 @@
                                 <img src="assets/img/icons8-time-management-48.png" alt="skills image" />
                             </div>
                             <h3 class="skills__name">Prioritization</h3>
+                        </div>
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="assets/img/icons8-communication-50.png" alt="skills image" />
+                            </div>
+                            <h3 class="skills__name">Interaction </h3>
                         </div>
                     </div>
                 </div>
