mobile media queries fixed

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <footer class="footer">
         <div class="footer__container container">
             <h1 class="footer__title">Dhruv Wadhwani</h1>
-            <p>Frontend Developer</p>
+            <p>Web Developer | Data Analytics</p>
             <ul class="footer__list">
                 <li>
                     <a href="#home" class="footer__link">Home</a>
