--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo"> DHRUV </a>
+            <a href="#" class="nav__logo">DHRUV WADHWANI </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__itemm">
@@ -404,29 +404,54 @@
                     <div class="swiper-wrapper">
                         <!--==================== PROJECT 1 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="Real Estate.png" alt="projects image" class="projects__img" />
+                            <img src="./assets/Projects/Real Estate.png" alt="projects image" class="projects__img" />
                             <div>
                                 <span class="projects__subtitle"> Fullstack </span>
                                 <h1 class="projects__title">Real Estate Website Website</h1>
-                                <a href="#" class="projects__button">
+                                <a target="_blank" href="https://github.com/dhruvwadhwani7/Real-Estate-Website" class="projects__button">
                                     Demo <i class="ri-arrow-right-line"></i>
                                 </a>
                             </div>
                         </div>
                         <!--==================== PROJECT 2 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="portfolio project.png" alt="projects image" class="projects__img" />
+                            <img src="./assets/Projects/portfolio project.png" alt="projects image" class="projects__img" />
                             <div>
                                 <span class="projects__subtitle"> front-end </span>
                                 <h1 class="projects__title">Portfolio Website</h1>
+                                <a href="https://dhruvwadhwani.netlify.app/" class="projects__button">
+                                    Demo <i class="ri-arrow-right-line"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                         <!--==================== PROJECT 3====================-->
+                        <div class="projects__content swiper-slide">
+                            <img src="./assets/Projects/Hate Speech Detector .jpg" alt="projects image" class="projects__img" />
+                            <div>
+                                <span class="projects__subtitle">Python Flask Frontend</span>
+                                <h1 class="projects__title">Hate Speech Detetcor</h1>
                                 <a href="#" class="projects__button">
                                     Demo <i class="ri-arrow-right-line"></i>
                                 </a>
                             </div>
                         </div>
-                        <!--==================== PROJECT 3 ====================-->
+
+                        <!--==================== PROJECT 3====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="Netflix.png" alt="projects image" class="projects__img" />
+                            <img src="./assets/Projects/Figma Design.png" alt="projects image" class="projects__img" />
+                            <div>
+                                <span class="projects__subtitle">Figma Design</span>
+                                <span class="projects__subtitle">(Ongoing for Coding)</span>
+                                <h1 class="projects__title">Trip Vista - Travel App</h1>
+                                <a target="_blank" href="https://www.figma.com/design/zPSEHOI8VrMQv6Q2jaTX6v/Untitled?node-id=0-1&t=3ZHAtSAQjSXYgaXj-1" class="projects__button button">
+                                    Demo <i class="ri-arrow-right-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PROJECT 4====================-->
+                        <div class="projects__content swiper-slide">
+                            <img src="./assets/Projects/Netflix.png" alt="projects image" class="projects__img" />
                             <div>
                                 <span class="projects__subtitle"> front-end </span>
                                 <h1 class="projects__title">Netflix Clone</h1>
@@ -435,6 +460,19 @@
                                 </a>
                             </div>
                         </div>
+
+                         <!--==================== PROJECT 5====================-->
+                        <div class="projects__content swiper-slide">
+                            <img src="./assets/Projects/Spotify Clone.png" alt="projects image" class="projects__img" />
+                            <div>
+                                <span class="projects__subtitle"> front-end </span>
+                                <h1 class="projects__title">Spotify Clone</h1>
+                                <a target="_blank" href="https://github.com/dhruvwadhwani7/Spotify-Clone" class="projects__button">
+                                    Demo <i class="ri-arrow-right-line"></i>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                     <!-- Swiper arrows -->
                     <div class="swiper-button-next">
