--- a/index.html
+++ b/index.html
@@ -404,10 +404,21 @@
                     <div class="swiper-wrapper">
                         <!--==================== PROJECT 1 ====================-->
                         <div class="projects__content swiper-slide">
+                            <img src="./assets/Projects/Excel Analyzer.png" alt="projects image" class="projects__img" />
+                            <div>
+                                <span class="projects__subtitle"> Fullstack </span>
+                                <h1 class="projects__title">Excel Analyzer</h1>
+                                <a target="_blank" href="https://excelanalyzer.netlify.app/" class="projects__button">
+                                    Demo <i class="ri-arrow-right-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PROJECT 1 ====================-->
+                        <div class="projects__content swiper-slide">
                             <img src="./assets/Projects/Real Estate.png" alt="projects image" class="projects__img" />
                             <div>
                                 <span class="projects__subtitle"> Fullstack </span>
-                                <h1 class="projects__title">Real Estate Website Website</h1>
+                                <h1 class="projects__title">Real Estate Website</h1>
                                 <a target="_blank" href="https://github.com/dhruvwadhwani7/Real-Estate-Website" class="projects__button">
                                     Demo <i class="ri-arrow-right-line"></i>
                                 </a>
