--- a/index.html
+++ b/index.html
@@ -450,6 +450,19 @@
 
                         <!--==================== PROJECT 3====================-->
                         <div class="projects__content swiper-slide">
+                            <img src="./assets/Projects/Stack Game.png" alt="projects image" class="projects__img" />
+                            <div>
+                                <span class="projects__subtitle">Block Stack Game</span>
+                                <span class="projects__subtitle"></span>
+                                <h1 class="projects__title">Blizr</h1>
+                                <a target="_blank" href="https://blizr.netlify.app/" class="projects__button button">
+                                    Demo <i class="ri-arrow-right-line"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PROJECT 3====================-->
+                        <div class="projects__content swiper-slide">
                             <img src="./assets/Projects/Figma Design.png" alt="projects image" class="projects__img" />
                             <div>
                                 <span class="projects__subtitle">Figma Design</span>
