--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div>
                         <h3 class="home__info-title">COMPLETED PROJECTS</h3>
-                        <p class="home__info-number">5+</p>
+                        <p class="home__info-number">6+</p>
                     </div>
                     <div>
                         <h3 class="home__info-title">
@@ -357,6 +357,13 @@
                                 <img src="assets/img/tcs logo.png" alt="skills image" />
                             </div>
                             <h3 class="skills__name">TCS</h3>
+                        </div>
+
+                         <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="assets/img/ACN.svg" alt="skills image" />
+                            </div>
+                            <h3 class="skills__name">Accenture</h3>
                         </div>
                     </div>
                 </div>
